--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ favicon: "logo.png" # name+extension of favicon (which must be put on the root f
 theme: minimalist-please # if you are using GitHub Pages, change it to remote_theme: riggraz/minimalist-please
 
 theme_config:
+  style: synthwave # ou 'hacker'
   appearance: "auto" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
